# cfsniff

./: .gitignore  CLAUDE.md  GETTING-STARTED.md  LICENSE  README.md  pyproject.toml  report.html
.github/workflows/: ci.yml  release.yml
docs/perf-baselines/: 2026-04-26-after-2-workers.json  2026-04-26-baseline.json  2026-05-01-prefilter-classification.json  2026-05-01-prefilter-classification.md  README.md  RUNBOOK.md
src/cfsniff/: __init__.py  __main__.py  api.py  audit.py  cli.py  output.py  prefilter.py  report.py  scanner.py  version_check.py
tests/: conftest.py  test_api.py  test_audit.py  test_cli.py  test_output.py  test_prefilter.py  test_report.py  test_scanner.py  test_timing.py  test_version_check.py
tests/fixtures/perf/: .gitignore  README.md  generate.py
