[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cfsniff"
version = "0.1.5"
description = "Sniff out secrets in arbitrary text using the ClassiFinder API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Thomas Paras" }]
dependencies = [
    "classifinder>=0.1.3",
    "classifinder-engine~=0.1.0",
    "click>=8.0",
    "rich>=13.0",
]

[project.optional-dependencies]
clipboard = ["pyperclip>=1.8"]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "httpx>=0.27",
    "pyperclip>=1.8",
]

[project.scripts]
cfsniff = "cfsniff.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cfsniff"]

[tool.hatch.build.targets.sdist]
# Default is "everything tracked in git". Trim the fat that PyPI users don't need.
exclude = [
    ".github",
    "docs",
    "uv.lock",
    "tests/fixtures/perf/data",
]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
